--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1180,6 +1180,17 @@ author = "Leslie Borjas De Xena"
   publisher={Springer}
 }
 
+@article{ladron2008revision,
+  title={Revisi{\'o}n por pares:?` Qu{\'e} es y para qu{\'e} sirve?},
+  author={Ladr{\'o}n de Guevara Cervera, Michele and Hincapi{\'e}, Jhoana and Jackman, Joseph and Herrera, Omar and Caballero Uribe, Carlo Vinicio},
+  journal={Revista Salud Uninorte},
+  volume={24},
+  number={2},
+  pages={258--272},
+  year={2008},
+  publisher={Fundaci{\'o}n Universidad del Norte}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
