--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1161,6 +1161,15 @@ author = "Leslie Borjas De Xena"
         volume={8095 LNCS}
 }
 
+@inproceedings{balderas2013generative,
+  title={A generative computer language to customize online learning assessments},
+  author={Balderas, Antonio and Ruiz-Rube, Iv{\'a}n and Palomo-Duarte, Manuel and Dodero, Juan M},
+  booktitle={Proceedings of the First International Conference on Technological Ecosystem for Enhancing Multiculturality},
+  pages={141--147},
+  year={2013},
+  organization={ACM}
+}
+
 @article{Balderas:2015,
         author={Balderas,A. and Dodero,J. M. and Palomo-Duarte,M. and Ruiz-Rube,I. },
         year={2015},
